# write-me-blog

./: .env.example  .gitignore  README.md  pyproject.toml
src/write_me_blog/: crew.py  main.py
src/write_me_blog/config/: agents.yaml  tasks.yaml
